Suspend Plasma removable device automounting.

Before doing operations, we connect to DBus session of the original user
and stop kded module for device automounting.

BUG: 368175